--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -154,9 +154,9 @@ table tr td.centery{
         </tr>
         <tr>
             <td>Swim.ai</td>
-            <td>Chris Sachs</td>
+            <td>Simon Crosby</td>
             <td class="centery">1:30pm</td>
-            <td></td>
+            <td>Swim OS & NATS</td>
         </tr>
         <tr>
             <td>NATS Community & Ecosystem Engagement</td>
@@ -207,6 +207,12 @@ table tr td.centery{
           <strong>Ron Britvich</strong> <br>
           Worlds, Inc.<br>
           <a href="mailto:ron@britvich.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
+      </div>
+      <div class="grid-item">
+          <strong>Simon Crosby</strong><br>
+          CTO @ <a href="https://swim.ai" target="_blank">Swim</a><br>
+          &nbsp;<a href="https://www.linkedin.com/in/sicrosby/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
+          <a href="https://twitter.com/simoncrosby" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
       </div>
       <div class="grid-item">
           <strong>Alex Ellis</strong><br>
@@ -270,13 +276,7 @@ table tr td.centery{
           <a href="https://github.com/aricart" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
           <a href="https://www.linkedin.com/in/albertoricart/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
       </div>
-      <div class="grid-item">
-          <strong>Chris Sachs</strong><br>
-          Co-Founder & Chief Architect @ <a href="https://swim.ai" target="_blank">Swim</a><br>
-          <a href="https://github.com/c9r" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
-          &nbsp;<a href="https://www.linkedin.com/in/cdsachs/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
-          <a href="https://twitter.com/c9r" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
-      </div>
+
       <div class="grid-item">
           <strong>Colin Sullivan</strong><br>
               Synadia, Product Manager<br>
