updating schedule - move Alex

--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -54,11 +54,12 @@ table tr td.centery{
             <td></td>
         </tr>
         <tr>
-            <td>NATS & Kubernetes</td>
-            <td>Wally Quevedo</td>
+            <td>OpenFaaS</td>
+            <td>Alex Ellis</td>
             <td class="centery">8:20am</td>
-            <td>Past, Present, Future</td>
+            <td></td>
         </tr>
+
         <tr>
             <td>NATS & Rust</td>
             <td>Tyler Neely
@@ -105,10 +106,10 @@ table tr td.centery{
             <td>Simplified monitoring for complex deployments</td>
         </tr>
         <tr>
-            <td>OpenFaaS</td>
-            <td>Alex Ellis</td>
+            <td>NATS & Kubernetes</td>
+            <td>Wally Quevedo</td>
             <td class="centery">11:10am</td>
-            <td></td>
+            <td>Past, Present, Future</td>
         </tr>
         <tr class="success">
             <td colspan="4" align="center">Break</td>
@@ -206,6 +207,8 @@ table tr td.centery{
       <div class="grid-item">
           <strong>Ron Britvich</strong> <br>
           Worlds, Inc.<br>
+          <a href="https://github.com/Britvich" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
+          &nbsp;<a href="https://twitter.com/Britvich" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
           <a href="mailto:ron@britvich.com" target="_blank"><img src="/img/social/black_envelope.png" height="18px" width="18px"></a>
       </div>
       <div class="grid-item">
