--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -54,10 +54,10 @@ table tr td.centery{
             <td></td>
         </tr>
         <tr>
-            <td>OpenFaaS</td>
+            <td>OpenFaaS, NATS & Kubernetes</td>
             <td>Alex Ellis</td>
             <td class="centery">8:20am</td>
-            <td></td>
+            <td>Discussing 3 main PLONK stack projects and how NATS integrates with Serverless</td>
         </tr>
 
         <tr>
