--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -154,10 +154,10 @@ table tr td.centery{
             <td>Distributed Identity & Permissioning: The case for bearer tokens in NATS</td>
         </tr>
         <tr>
-            <td>Swim.ai</td>
+            <td>SwimOS & NATS</td>
             <td>Simon Crosby</td>
             <td class="centery">1:30pm</td>
-            <td>Swim OS & NATS</td>
+            <td>Building SwimOS WebAgent Apps from NATS Streams</td>
         </tr>
         <tr>
             <td>NATS Community & Ecosystem Engagement</td>
@@ -185,7 +185,7 @@ table tr td.centery{
 
       <div class="grid-item">
           <strong>Derek Collison</strong><br>
-          <a href="https://synadia.com" target="_blank">Synadia</a>, Founder & CEO<br>
+          Creator of NATS, CloudFoundry<br>
               <a href="https://github.com/derekcollison" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
           &nbsp;<a href="https://www.linkedin.com/in/derekcollison/" target="_blank"><img src="/img/social/linkedin.png" height="16px" width="16px"></a>
                   &nbsp;<a href="https://twitter.com/derekcollison" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
