--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -54,7 +54,7 @@ table tr td.centery{
             <td></td>
         </tr>
         <tr>
-            <td>OpenFaaS, NATS & Kubernetes</td>
+            <td>Serverless on Kubernetes with OpenFaaS & NATS</td>
             <td>Alex Ellis</td>
             <td class="centery">8:20am</td>
             <td>Discussing 3 main PLONK stack projects and how NATS integrates with Serverless</td>
@@ -219,7 +219,7 @@ table tr td.centery{
       </div>
       <div class="grid-item">
           <strong>Alex Ellis</strong><br>
-          <a href="https://openfaas.com" target="_blank">OpenFaaS</a><br>
+          CNCF Ambassador & Founder @ <a href="https://openfaas.com" target="_blank">OpenFaaS Ltd</a><br>
           <a href="https://github.com/alexellis" target="_blank"><img src="/img/social/github.png" height="16px" width="16px"></a>
           &nbsp;<a href="https://twitter.com/alexellisuk" target="_blank"><img src="/img/social/twitter.png"height="16px" width="16px"></a>
           &nbsp;
