--- a/content/nats_connect.html
+++ b/content/nats_connect.html
@@ -51,7 +51,7 @@ table tr td.centery{
             <td>Welcome & Introduction</td>
             <td>Derek Collison</td>
             <td class="centery">8:00am</td>
-            <td></td>
+            <td>Welcome to NATS Connect Live!</td>
         </tr>
         <tr>
             <td>Serverless on Kubernetes with OpenFaaS & NATS</td>
@@ -76,7 +76,7 @@ table tr td.centery{
             <td>Pub/Sub on the Power Grid</td>
             <td>Dwayne Bradley</td>
             <td class="centery">9:20am</td>
-            <td></td>
+            <td>Enabling realtime communications for the modern power grid</td>
         </tr>
         <tr class="success">
             <td colspan="4" align="center">Break</td>
@@ -97,7 +97,7 @@ table tr td.centery{
             <td>NATS Websockets</td>
             <td>Alberto Ricart / Ivan Kozlovic</td>
             <td class="centery">10:30am</td>
-            <td></td>
+            <td>Opening the world of NATS to Web and Mobile</td>
         </tr>
         <tr>
             <td>NATS Surveyor</td>
@@ -136,7 +136,7 @@ table tr td.centery{
             <td>NGS Getting Started</td>
             <td>Wally Quevedo</td>
             <td class="centery">12:40pm</td>
-            <td></td>
+            <td>Introduction to Synadia's global NATS system, NGS</td>
         </tr>
         <tr>
             <td>Running NGS</td>
@@ -169,7 +169,7 @@ table tr td.centery{
             <td>NATS Future Work & Wrap Up</td>
             <td>Derek Collison</td>
             <td class="centery">2:30pm</td>
-            <td></td>
+            <td>What's next after we Connect Everything?</td>
         </tr>
         <tr class="info">
             <td colspan="4" align="center">Audience Q & A</td>
