adding common lisp client

--- a/content/download/ccqpein/nats-cl.html
+++ b/content/download/ccqpein/nats-cl.html
@@ -2,7 +2,7 @@
 title = "Common Lisp NATS Client"
 description = ""
 downloadCategories = ["clients","community"]
-downloadTags = ["common lisp"]
+downloadTags = ["client", "lisp"]
 [menu.main]
   name = "Common Lisp"
   weight = 0
