utm addition and ngs to cloud where noted

--- a/backup/content/about.html
+++ b/backup/content/about.html
@@ -14,7 +14,7 @@ description = "NATS is a high performance messaging queue system designed for di
   </div>
 </div>
 
-<p class="lead">NATS is a family of open source products that are tightly integrated but can be deployed independently. NATS is being deployed globally by thousands of companies, spanning innovative use-cases including: Mobile apps, Microservices and Cloud Native, and IoT.</p> <p class="lead">NATS is also available as a global communications system called NGS. Get started today for free at <a target="_blank" href="https://synadia.com/ngs/signup">NGS Signup</a>.</p>
+<p class="lead">NATS is a family of open source products that are tightly integrated but can be deployed independently. NATS is being deployed globally by thousands of companies, spanning innovative use-cases including: Mobile apps, Microservices and Cloud Native, and IoT.</p> <p class="lead">NATS is also available as a global communications system called NGS. Get started today for free at <a target="_blank" href="https://www.synadia.com/cloud?utm_source=nats_io&utm_medium=nats">NGS Signup</a>.</p>
 <p>The core NATS Server acts as a central nervous system for building distributed applications. There are dozens of clients ranging from Java, .NET, to GO. NATS Streaming extends the platform to provide for real-time streaming &amp; big data use-cases.</p>
 <p>NATS was created by Derek Collison, Founder and CEO at Synadia in response to the market need for a simple and high performance messaging solution. NATS is currently deployed in some of the largest cloud platforms, including: VMware, CloudFoundry, Baidu, Siemens, and GE. NATS is available under the Apache-2.0 Open Source License.</p>
 
