--- a/backup/content/support.html
+++ b/backup/content/support.html
@@ -22,7 +22,7 @@ description = "NATS is a high performance messaging system that acts as a distri
     <p>Often the quickest way to get help is to start a discussion with other NATS users. There
       are <a href="/contributing#communityhelp">several public forums</a> where you can discuss NATS with other knowledgeable users.</p>
     <h2>Commercial Support and Services</h2>
-    <p>The NATS team, under the stewardship of <a href="https://synadia.com" target="_blank">Synadia Communications, Inc.</a>, has decades of experience in distributed systems messaging and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Synadia supported clients listed <a href="/download">here</a>.</p>
+    <p>The NATS team, under the stewardship of <a href="https://www.synadia.com?utm_source=nats_io&utm_medium=nats" target="_blank">Synadia Communications, Inc.</a>, has decades of experience in distributed systems messaging and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Synadia supported clients listed <a href="/download">here</a>.</p>
     <p>Contact our world class team at <a href="mailto:info@synadia.com">Synadia</a> for commercial support and professional services to help you best leverage NATS for your business.</p>
   </div>
 </div>
